fixed accidental comment

--- a/pages/issues.html
+++ b/pages/issues.html
@@ -26,12 +26,12 @@
                 </p>
             </div>
             
-            <!-- <iframe 
+            <iframe 
                 id="embedded-content" 
                 src="https://mywitc-my.sharepoint.com/personal/17954689_northwoodtech_edu/_layouts/15/Doc.aspx?sourcedoc={7b59988b-1dcd-4cc1-b9e7-64568eb51fe6}&amp;action=embedview&amp;scale=50"
                 allowfullscreen
                 >
-            </iframe> -->
+            </iframe>
            
             <div id="form-container">
                 <h1>Submit an Article or Resource</h1>
