streamlined form behavior

--- a/pages/issues.html
+++ b/pages/issues.html
@@ -45,8 +45,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" placeholder="example@email.com" required>
+                        <!-- This was initially an email-only field, but has since been generalized -->
+                        <label for="email">Contact:</label>
+                        <input type="text" id="email" name="email" placeholder="How can we reach you?" required>
                     </div>
 
                     <div class="form-group">
@@ -56,7 +57,7 @@
                     
                     <div class="form-group">
                         <label for="resource-url">Link:</label>
-                        <input type="text" id="resource-url" name="resource-url" placeholder="A link if applicable">
+                        <input type="text" id="resource-url" name="resource-url" placeholder="An articles, video, or other resource" required>
                     </div>
 
                     <div class="form-group">
