--- a/pages/issues.html
+++ b/pages/issues.html
@@ -57,7 +57,7 @@
                     
                     <div class="form-group">
                         <label for="resource-url">Link:</label>
-                        <input type="text" id="resource-url" name="resource-url" placeholder="An articles, video, or other resource" required>
+                        <input type="text" id="resource-url" name="resource-url" placeholder="An article, video, or other resource" required>
                     </div>
 
                     <div class="form-group">
